@@ -19,6 +19,8 @@
  */
 package org.apache.hadoop.hbase;
 
+import java.util.Map.Entry;
+
 import org.apache.hadoop.conf.Configuration;
 
 /**
@@ -36,9 +38,9 @@ public class HBaseConfiguration extends Configuration {
    * @param c Configuration to clone.
    */
   public HBaseConfiguration(final Configuration c) {
-    super(c);
-    if (!(c instanceof HBaseConfiguration)) {
-      addHbaseResources();
+    super();
+    for (Entry<String, String>e: c) {
+      set(e.getKey(), e.getValue());
     }
   }
   
